--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -7,20 +7,20 @@ styles: true
 $backgroundColour: #ffffff !default;
 $codeBackgroundColour: #fafafa !default;
 $featureBackgroundColour: #f9fafa !default;
-$accentColour: #05bf85 !default;
+$accentColour: #606c38 !default;
 
 // Text colours
-$headingColour: #242e2b !default;
+$headingColour: #606c38 !default;
 $bodyColour: #384743 !default;
-$linkColour: #283618 !default;
-$hoverColour: #008000 !default;
+$linkColour: #606c38 !default;
+$hoverColour: #606c38 !default;
 $focusColour: #fa407a !default;
 $captionColour: #a8adac !default;
 $white: #ffffff !default;
 
 // Typography
 $bodytype: (
-  font-family: "Metropolis, serif",
+  font-family: "Merriweather, serif",
   regular: 400,
   bold: 700,
   italic: italic,
