--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -2,12 +2,12 @@
 $backgroundColour: #ffffff !default;
 $codeBackgroundColour: #fafafa !default;
 $featureBackgroundColour: #f9fafa !default;
-$accentColour: #05bf85 !default;
+$accentColour: #606c38 !default;
 
 // Text colours
-$headingColour: #242e2b !default;
+$headingColour: #606c38 !default;
 $bodyColour: #384743 !default;
-$linkColour: #05bf85 !default;
+$linkColour: #606c38 !default;
 $hoverColour: #008000 !default;
 $focusColour: #fa407a !default;
 $captionColour: #a8adac !default;
@@ -26,7 +26,8 @@ $headingtype: (
   font-family: '"Merriweather", serif',
   regular: 400,
   bold: 700,
-  cap-height: 0.75
+  cap-height: 0.75,
+  color: #606c38
 ) !default;
 
 $monospacetype: (
