--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -31,7 +31,8 @@ $headingtype: (
   font-family: '"Merriweather", serif',
   regular: 400,
   bold: 700,
-  cap-height: 0.75
+  cap-height: 0.75,
+  color: #606c38
 ) !default;
 
 $monospacetype: (
